Updated files with 2nd implementation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </form>
                 <hr>
                 <!-- Search history -->
-                <div class="d-grid gap-2 mx-auto" id="city-history"></div>
+                <div class="container btn-group-vertical px-0" id="city-history"></div>
             </section>
             <section class="col-sm-12 col-md-9">
                 <div class="container col-sm-12 col-md-9 mt-2 column"></div>
