Updated README.md file and changed API urls to use 'https'

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="container">
         <div class="row">
             <section class="col-sm-12 col-md-3 mt-2">
-                <h3 class="fw-bold">Search for a City:</h3>
+                <h3 class="fw-bold" id="search-title">Search for a City:</h3>
                 <!-- Search Input form -->
                 <form class="d-flex flex-column" id="search">
                     <input class="form-control mb-3" type="search" placeholder="Search" aria-label="Search" id="search-input">
