Added handling codes for unexpected response

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="./assets/css/style.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Header -->
     <header class="navbar custom-navbar">
         <div class="container-fluid">
           <span class="navbar-brand mb-0 h1">Weather Dashboard</span>
