Changed the backgound color and font color of the current weather

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <section class="col-sm-12 col-md-9">
                 <div class="container col-sm-12 col-md-9 mt-2 column"></div>
                     <!-- Current Weather -->
-                    <section class="today-weather" id="today">
+                    <section class="today-weather text-white bg-dark" id="today">
                     </section>
                     <!-- 5 days forecast -->
                     <section class="container column mt-3 px-0">
